--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.21",
     "clsx": "2.1.1",
+    "firebase": "^11.6.0",
     "framer-motion": "11.13.1",
     "git": "^0.1.5",
     "intl-messageformat": "^10.5.0",
