--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroui/badge": "^2.2.10",
     "@heroui/button": "2.2.17",
     "@heroui/card": "^2.2.16",
+    "@heroui/checkbox": "^2.3.16",
     "@heroui/code": "2.2.12",
     "@heroui/dropdown": "^2.3.17",
     "@heroui/image": "^2.2.10",
@@ -19,12 +20,14 @@
     "@heroui/kbd": "2.2.13",
     "@heroui/link": "2.2.14",
     "@heroui/listbox": "2.3.16",
+    "@heroui/modal": "^2.2.14",
     "@heroui/navbar": "2.2.15",
     "@heroui/scroll-shadow": "^2.3.11",
     "@heroui/snippet": "2.2.18",
     "@heroui/switch": "2.2.15",
     "@heroui/system": "2.4.13",
     "@heroui/theme": "2.4.13",
+    "@heroui/toast": "^2.0.7",
     "@heroui/tooltip": "^2.2.14",
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.21",
